--- a/development/scss/compiled/master.css
+++ b/development/scss/compiled/master.css
@@ -286,8 +286,11 @@ main {
 }
 
 header {
+  position: relative;
   padding: 15px 25px 10px;
   background: #ffffff;
+  box-shadow: 0 1px 8px -7px rgba(50, 50, 50, 0.8);
+  z-index: 30;
 }
 header .header_logo {
   display: inline-block;
@@ -356,8 +359,16 @@ header .user .profile_image {
 .grid {
   display: inline-block;
   width: calc(100% - 373px);
+  max-height: 504px;
   padding-right: 15px;
   vertical-align: top;
+  overflow-y: scroll;
+}
+.grid::-webkit-scrollbar {
+  width: 0px;
+  /* Remove scrollbar space */
+  background: transparent;
+  /* Optional: just make scrollbar invisible */
 }
 
 .grid_item {
@@ -431,11 +442,22 @@ header .user .profile_image {
 }
 
 .info_panel {
+  position: relative;
+  top: -45px;
   display: inline-block;
   width: 360px;
+  height: 504px;
+  padding-top: 43px;
   padding-left: 25px;
   vertical-align: top;
   border-left: solid 1px #bbb;
+  overflow-y: scroll;
+}
+.info_panel::-webkit-scrollbar {
+  width: 0px;
+  /* Remove scrollbar space */
+  background: transparent;
+  /* Optional: just make scrollbar invisible */
 }
 .info_panel .thumbnail {
   position: relative;
@@ -446,7 +468,7 @@ header .user .profile_image {
   border: solid 3px white;
   background: #999;
   border-radius: 50%;
-  box-shadow: 0 0 7px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 7px rgba(60, 60, 60, 0.25);
 }
 .info_panel .project_name {
   position: relative;
